manifest/objects/Location__c.object
<CustomObject>
    <description>Used to store non-contractual locations such as broker locations, hospitals, and stores</description>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Location_HQ__r.Owner.FirstName + &apos; &apos; +  Location_HQ__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Billing_Address__c &amp; &quot; &quot; &amp;  Billing_City__c &amp; &quot; &quot; &amp; Billing_State__c &amp; &quot; &quot; &amp;  Billing_Postal_Code__c &amp; &quot; &quot; &amp;  Billing_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Postal_Code__c</fullName>
        <label>Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Former_GUID__c</fullName>
        <description>GUID of location when it was an ACCOUNT</description>
        <externalId>true</externalId>
        <label>Former GUID</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the former Account which got converted into Legacy Id on Master Account</description>
        <label>Legacy Id</label>
        <referenceTo>Legacy_Id__c</referenceTo>
        <relationshipLabel>Former Locations</relationshipLabel>
        <relationshipName>Former_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_HQ_Name__c</fullName>
        <description>Location Name field for look up filter</description>
        <label>Location HQ Name</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_HQ__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Location HQ</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Location_HQ__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>